# SERF

./: .gitignore  INSTALL.md  INSTALL_MYSQL.md  MISC.md  README.md  README2014.md  README_old.md  my.cnf  my_serf.cnf  serf.sql  setup.py  standalone.py
addon/: README.md
python/: MANIFEST.in  README.md  eerf.sln  pyproject.toml  scratch.py  setup.py  standalone.py
python/API/: API.py  OnlineAPIExtension.py  settings.py  standalone.py
python/API/db/: models.py
python/EERF/: API.py  manage.py  my_test.py
python/EERF/APP/: models.py
python/EERF/EERF/: settings.py  urls.py  wsgi.py
python/EERF/tools/: MonitorNewTrials.pyw
python/EERF_backup/: my_test.py
python/EERF_backup/tools/: OnlineGUI.py  README.md
python/SQLAlchemy_backup/tools/: PlotERP.py
python/eerf/: README.md  eerf.pyproj  manage.py  standalone.py
python/eerf/api/: admin.py  models.py
python/eerf/eerf/: settings.py  urls.py
python/eerf/eerfd/: models.py  urls.py  views.py
python/eerfstandalone/: standalone.py
python/eerfx/: feature_functions.py  online.py
python/eerfx/utils/: GetMVC.pyw  MonitorNewTrials.pyw
python/serf/: __init__.py  admin.py  boot_django.py  models.py  urls.py  views.py
python/serf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/serf/migrations/: 0001_initial.py  0002_remove_procedure_name_procedure_offset_direction_and_more.py
python/serf/scripts/: Depth_Process.py  Features_Process.py  MonitorNewTrials.pyw  djangoshell.py  makemigrations.py  migrate.py
python/serf/tools/: db_wrap.py  online.py
python/tools/: NMESGUI.py  OnlineGUI.py
(+401 files in other folders)
