[tool.poetry]
name = "serf"
version = "1.4"
description = "Django application to administer SERF database and act as an ORM."
authors = ["Chadwick Boulay <chadwick.boulay@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Django = "^5.0.4"
scipy = "^1.13.0"
mysqlclient = "^2.2.4"

pyside6 = { version = "^6.7.0", optional = true }
qtpy = { version = "^2.4.1", optional = true }
pytf = { git = "https://github.com/SachsLab/pytf.git", optional = true }
mspacman = { git = "https://github.com/SachsLab/mspacman.git", optional = true }
pyfftw = [{version = "^0.13.1", platform = "linux", optional = true }, {version = "^0.13.1", platform = "win32", optional = true }]
matplotlib = "^3.8.4"

[tool.poetry.extras]
features = ["pyside6", "qtpy", "pytf", "mspacman", "pyfftw"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
serf-shell = "serf.scripts.djangoshell:main"
serf-makemigrations = "serf.scripts.makemigrations:main"
serf-migrate = "serf.scripts.migrate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
